--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,9 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     name: ${{ matrix.config.r }}
-    env:
-      R_LATEST: 3.6.2
-      R_VERSION: ${{ matrix.config.r }}
 
     strategy:
       fail-fast: false
@@ -19,59 +16,22 @@ jobs:
         config:
         - { r: 'devel' }
         - { r: 'patched' }
-        - { r: '3.6.2' }
+        - { r: '3.6.2', extra_tags: 'latest' }
         - { r: '3.5.3' }
         - { r: '3.4.4' }
         - { r: '3.3.3' }
         - { r: '3.2.5' }
 
     steps:
-
     - uses: actions/checkout@v1
-
-    - name: Build the Docker image
-      run: docker build --build-arg R_VERSION=${R_VERSION} -t docker.io/rhub/r-minimal:${R_VERSION} .
-
-    - name: Log in to Docker Hub
-      run: echo ${DOCKER_HUB_TOKEN} | docker login -u ${DOCKER_HUB_USERNAME} --password-stdin docker.io
-      env:
-        DOCKER_HUB_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
-        DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-
-    - name: Log in to GitHub Packages
-      run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_USERNAME} --password-stdin docker.pkg.github.com
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GITHUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-
-    - name: Push it to Docker Hub, GitHub Packages
-      run: |
-        docker tag docker.io/rhub/r-minimal:${R_VERSION} docker.pkg.github.com/r-hub/r-minimal/r-minimal:${R_VERSION}
-        docker push docker.io/rhub/r-minimal:${R_VERSION}
-        docker push docker.pkg.github.com/r-hub/r-minimal/r-minimal:${R_VERSION}
-        if [[ "$R_VERSION" == "devel" ]]; then
-          true
-        elif [[ "$R_VERSION" == "patched" ]]; then
-          R_VERSION_NUMBER=`docker run --rm docker.io/rhub/r-minimal:${R_VERSION} R --slave -e 'cat(format(getRversion()))'`
-          R_MAJOR=`echo ${R_VERSION_NUMBER} | sed 's/[.][0-9][0-9]*$//'`
-          docker tag docker.io/rhub/r-minimal:${R_VERSION} docker.io/rhub/r-minimal:${R_VERSION_NUMBER}-patched
-          docker tag docker.io/rhub/r-minimal:${R_VERSION} docker.pkg.github.com/r-hub/r-minimal/r-minimal:${R_VERSION_NUMBER}-patched
-          docker tag docker.io/rhub/r-minimal:${R_VERSION} docker.io/rhub/r-minimal:${R_MAJOR}-patched
-          docker tag docker.io/rhub/r-minimal:${R_VERSION} docker.pkg.github.com/r-hub/r-minimal/r-minimal:${R_MAJOR}-patched
-          docker push docker.io/rhub/r-minimal:${R_VERSION_NUMBER}-patched
-          docker push docker.pkg.github.com/r-hub/r-minimal/r-minimal:${R_VERSION_NUMBER}-patched
-          docker push docker.io/rhub/r-minimal:${R_MAJOR}-patched
-          docker push docker.pkg.github.com/r-hub/r-minimal/r-minimal:${R_MAJOR}-patched
-        else
-          R_MAJOR=`echo ${R_VERSION} | sed 's/[.][0-9][0-9]*$//'`
-          docker tag docker.io/rhub/r-minimal:${R_VERSION} docker.io/rhub/r-minimal:${R_MAJOR}
-          docker tag docker.io/rhub/r-minimal:${R_VERSION} docker.pkg.github.com/r-hub/r-minimal/r-minimal:${R_MAJOR}
-          docker push docker.io/rhub/r-minimal:${R_MAJOR}
-          docker push docker.pkg.github.com/r-hub/r-minimal/r-minimal:${R_MAJOR}
-        fi
-        if [[ "$R_LATEST" == "$R_VERSION" ]]; then
-          docker tag docker.io/rhub/r-minimal:${R_VERSION} docker.io/rhub/r-minimal:latest
-          docker tag docker.io/rhub/r-minimal:${R_VERSION} docker.pkg.github.com/r-hub/r-minimal/r-minimal:latest
-          docker push docker.io/rhub/r-minimal:latest
-          docker push docker.pkg.github.com/r-hub/r-minimal/r-minimal:latest
-        fi
+    - name: Docker build
+      uses: r-hub/actions/docker-build@master
+      with:
+        r_version: ${{ matrix.config.r }}
+        docker_name: rhub/r-minimal
+        github_name: r-hub/r-minimal/r-minimal
+        docker_username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        docker_password: ${{ secrets.DOCKER_HUB_TOKEN }}
+        github_username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        extra_tags: ${{ matrix.config.extra_tags }}
