New Dockerfile for prophet

--- a/examples/prophet/Dockerfile
+++ b/examples/prophet/Dockerfile
@@ -1,4 +1,12 @@
 
 FROM rhub/r-minimal
 
-RUN installr -d -t "gfortran linux-headers" prophet
+# install depencies by hand
+RUN apk add g++ linux-headers gfortran
+RUN installr -t "linux-headers gfortran g++" StanHeaders ggplot2 inline gridExtra loo pkgbuild BH dygraphs extraDistr grid methods rstantools scales stats tidyr xts
+
+# install a version of rstan which does not deal with V8
+RUN Rscript -e 'install.packages("https://cran.r-project.org/src/contrib/Archive/rstan/rstan_2.19.3.tar.gz", type = "source")'
+
+# install prophet
+RUN Rscript -e 'install.packages("prophet", repos = "https://cloud.r-project.org/", dependencies = "Depends")'
