Update example Dockerfiles
[ci skip]

--- a/examples/h2o/Dockerfile
+++ b/examples/h2o/Dockerfile
@@ -1,4 +1,4 @@
 
 FROM rhub/r-minimal
 
-RUN installr -d -a openjdk10-jre -t "curl-dev musl-dev" h2o
+RUN R_DEFAULT_INTERNET_TIMEOUT=10000 installr -d -a openjdk10-jre -t "curl-dev musl-dev" h2o
