--- a/examples/shiny/Dockerfile
+++ b/examples/shiny/Dockerfile
@@ -1,4 +1,13 @@
 
 FROM rhub/r-minimal
 
-RUN installr -d -t "file automake autoconf" shiny
+RUN apk add --no-cache --update-cache \
+        --repository http://nl.alpinelinux.org/alpine/v3.11/main \
+        autoconf=2.69-r2 \
+        automake=1.16.1-r0 && \
+    # repeat autoconf and automake (under `-t`)
+    # to (auto)remove them after installation
+    installr -d \
+        -t "bash libsodium-dev curl-dev linux-headers autoconf automake" \
+        -a libsodium \
+        shiny
