--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -18,19 +18,7 @@ jobs:
         - { r: 'patched' }
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Available platforms
-      run: echo ${{ steps.buildx.outputs.platforms }}
-
+    - uses: actions/checkout@v1
     - name: Docker build
       uses: r-hub/actions/docker-build@feature/arm64
       with:
