--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -14,19 +14,45 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - { r: 'devel' }
-        - { r: 'patched' }
+        - { r: 'devel',   tags: 'devel 4.2.0 4.2'                   }
+        - { r: 'patched', tags: '4.1.2-patched 4.1-patched patched' }
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Docker build
-      uses: r-hub/actions/docker-build@master
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
       with:
-        r_version: ${{ matrix.config.r }}
-        docker_name: rhub/r-minimal
-        github_name: r-hub/r-minimal/r-minimal
-        docker_username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        docker_password: ${{ secrets.DOCKER_HUB_TOKEN }}
-        github_username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        extra_tags: ${{ matrix.config.extra_tags }}
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Calculate tags
+      id: tags
+      run: >-
+        echo -n "::set-output name=tags::"
+        echo ${{ matrix.config.tags }} |
+        tr , '\n' |
+        sed -e 's|^|ghcr.io/r-hub/r-minimal/r-minimal:|' |
+        tr '\n' ,
+
+    - name: Check tags
+      run: |
+        echo "${{ steps.tags.outputs.tags }}"
+
+    - name: Build and push
+      if: false
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: ${{ steps.tags.outputs.tags }}
