YAML fix to set tags properly

--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Calculate tags
       id: tags
-      run: >-
+      run: |
         echo -n "::set-output name=tags::"
         echo ${{ matrix.config.tags }} |
         tr , '\n' |
