--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -15,8 +15,8 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - { r: 'devel',   tags: 'devel,4.2.0,4.2'                   }
-        - { r: 'patched', tags: '4.1.2-patched,4.1-patched,patched' }
+        - { r: 'devel',   tags: '%devel,%4.2.0,%4.2'                   }
+        - { r: 'patched', tags: '%4.1.2-patched,%4.1-patched,%patched' }
 
     steps:
     - name: Login to GitHub Container Registry
@@ -41,23 +41,36 @@ jobs:
     - name: Calculate tags
       id: tags
       run: |
-        echo -n "::set-output name=tags::"
-        echo ${{ matrix.config.tags }} |
-        tr , '\n' |
-        sed -e 's|^|ghcr.io/r-hub/r-minimal/r-minimal:|' |
-        tr '\n' ,
-        echo -n ${{ matrix.config.tags }} |
-        tr , '\n' |
-        sed -e 's|^|rhub/r-minimal:|' |
-        tr '\n' ,
+        echo "::set-output name=tagsa::${{ matrix.config.tags }}" |
+        sed -e 's|%|ghcr.io/r-hub/r-minimal/r-minimal:|g'
+        echo "::set-output name=tagsb::${{ matrix.config.tags }}" |
+        sed -e 's|%|r-hub/r-minimal:|g'
+        echo "::set-output name=tagsa315::${{ matrix.config.tags }}" |
+        sed -e 's|%|ghcr.io/r-hub/r-minimal/r-minimal:alpine315-|g'
+        echo "::set-output name=tagsb315::${{ matrix.config.tags }}" |
+        sed -e 's|%|r-hub/r-minimal:alpine315-|g'
 
     - name: Check tags
       run: |
-        echo "${{ steps.tags.outputs.tags }}"
+        echo "${{ steps.tags.outputs.tagsa }}"
+        echo "${{ steps.tags.outputs.tagsb }}"
+
+    - name: Check tags 2
+      run: |
+        echo "${{ steps.tags.outputs.tagsa315 }}"
+        echo "${{ steps.tags.outputs.tagsb315 }}"
+
+    - name: Build and push
+      if: false
+      uses: docker/build-push-action@v2
+      with:
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: ${{ steps.tags.outputs.tagsa }},${{ steps.tags.outputs.tagsb }}
 
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ${{ steps.tags.outputs.tags }}
+        tags: ${{ steps.tags.outputs.tagsa315 }},${{ steps.tags.outputs.tagsb315 }}
