--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,13 +16,13 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - { r: 'devel',   tags: 'devel,4.2.0,4.2'                   }
-        - { r: 'patched', tags: '4.1.2-patched,4.1-patched,patched' }
-        - { r: '4.1.2',   tags: '4.1.2,4.1,latest'                  }
-        - { r: '4.0.5',   tags: '4.0.5,4.0'                         }
-        - { r: '3.6.3',   tags: '3.6.5,3.6'                         }
-        - { r: '3.5.3',   tags: '3.5.3,3.5'                         }
-        - { r: '3.4.4',   tags: '3.4.4,3.4'                         }
+        - { r: 'devel',   tags: '%devel,%4.2.0,%4.2'                   }
+        - { r: 'patched', tags: '%4.1.2-patched,%4.1-patched,%patched' }
+        - { r: '4.1.2',   tags: '%4.1.2,%4.1,%latest'                  }
+        - { r: '4.0.5',   tags: '%4.0.5,%4.0'                          }
+        - { r: '3.6.3',   tags: '%3.6.5,%3.6'                          }
+        - { r: '3.5.3',   tags: '%3.5.3,%3.5'                          }
+        - { r: '3.4.4',   tags: '%3.4.4,%3.4'                          }
 
     steps:
     - name: Login to GitHub Container Registry
@@ -47,23 +47,28 @@ jobs:
     - name: Calculate tags
       id: tags
       run: |
-        echo -n "::set-output name=tags::"
-        echo ${{ matrix.config.tags }} |
-        tr , '\n' |
-        sed -e 's|^|ghcr.io/r-hub/r-minimal/r-minimal:|' |
-        tr '\n' ,
-        echo -n ${{ matrix.config.tags }} |
-        tr , '\n' |
-        sed -e 's|^|rhub/r-minimal:|' |
-        tr '\n' ,
-
-    - name: Check tags
-      run: |
-        echo "${{ steps.tags.outputs.tags }}"
+        echo "::set-output name=tagsa::${{ matrix.config.tags }}" |
+        sed -e 's|%|ghcr.io/r-hub/r-minimal/r-minimal:|g'
+        echo "::set-output name=tagsb::${{ matrix.config.tags }}" |
+        sed -e 's|%|rhub/r-minimal:|g'
+        echo "::set-output name=tagsa315::${{ matrix.config.tags }}" |
+        sed -e 's|%|ghcr.io/r-hub/r-minimal/r-minimal:alpine315-|g'
+        echo "::set-output name=tagsb315::${{ matrix.config.tags }}" |
+        sed -e 's|%|rhub/r-minimal:alpine315-|g'
 
     - name: Build and push
+      if: false
       uses: docker/build-push-action@v2
       with:
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ${{ steps.tags.outputs.tags }}
+        tags: ${{ steps.tags.outputs.tagsa }},${{ steps.tags.outputs.tagsb }}
+
+    - name: Build and push (Alpine 3.15)
+      uses: docker/build-push-action@v2
+      with:
+        platforms: linux/amd64,linux/arm64
+        push: true
+        build-args: |
+          ALPINE_VERSION=3.15.0
+        tags: ${{ steps.tags.outputs.tagsa315 }},${{ steps.tags.outputs.tagsb315 }}
