--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -61,6 +61,9 @@ jobs:
       with:
         platforms: linux/amd64,linux/arm64
         push: true
+        build-args: |
+          R_MAJOR=${{ matrix.config.r }}
+          ALPINE_VERSION=3.15.0
         tags: ${{ steps.tags.outputs.tagsa }},${{ steps.tags.outputs.tagsb }}
 
     - name: Build and push (Alpine 3.15)
@@ -69,5 +72,6 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         build-args: |
+          R_MAJOR=${{ matrix.config.r }}
           ALPINE_VERSION=3.15.0
         tags: ${{ steps.tags.outputs.tagsa315 }},${{ steps.tags.outputs.tagsb315 }}
