--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -55,6 +55,8 @@ jobs:
       with:
         platforms: linux/amd64,linux/arm64
         push: true
+        build-args: |
+          R_MAJOR=${{ matrix.config.r }}
         tags: ${{ steps.tags.outputs.tagsa }},${{ steps.tags.outputs.tagsb }}
 
     - name: Build and push (Alpine 3.15)
@@ -63,5 +65,6 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         build-args: |
+          R_MAJOR=${{ matrix.config.r }}
           ALPINE_VERSION=3.15.0
         tags: ${{ steps.tags.outputs.tagsa315 }},${{ steps.tags.outputs.tagsb315 }}
