Build arg correct name
It is R_VERSION /o\

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -62,8 +62,7 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         build-args: |
-          R_MAJOR=${{ matrix.config.r }}
-          ALPINE_VERSION=3.15.0
+          R_VERSION=${{ matrix.config.r }}
         tags: ${{ steps.tags.outputs.tagsa }},${{ steps.tags.outputs.tagsb }}
 
     - name: Build and push (Alpine 3.15)
@@ -72,6 +71,6 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         build-args: |
-          R_MAJOR=${{ matrix.config.r }}
+          R_VERSION=${{ matrix.config.r }}
           ALPINE_VERSION=3.15.0
         tags: ${{ steps.tags.outputs.tagsa315 }},${{ steps.tags.outputs.tagsb315 }}
