--- a/.github/workflows/old.yaml
+++ b/.github/workflows/old.yaml
@@ -1,4 +1,4 @@
-name: Docker build, all supported versions
+name: Docker build, old versions
 
 on:
   workflow_dispatch:
@@ -15,24 +15,59 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - { r: 'devel' }
-        - { r: 'patched' }
-        - { r: '4.1.2', extra_tags: 'latest' }
-        - { r: '4.0.5' }
-        - { r: '3.6.3' }
-        - { r: '3.5.3' }
-        - { r: '3.4.4' }
+        - { r: '3.5.3',   tags: '%3.5.3,%3.5'                          }
+        - { r: '3.4.4',   tags: '%3.4.4,%3.4'                          }
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Docker build
-      uses: r-hub/actions/docker-build@master
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
       with:
-        r_version: ${{ matrix.config.r }}
-        docker_name: rhub/r-minimal
-        github_name: r-hub/r-minimal/r-minimal
-        docker_username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        docker_password: ${{ secrets.DOCKER_HUB_TOKEN }}
-        github_username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        extra_tags: ${{ matrix.config.extra_tags }}
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Calculate tags
+      id: tags
+      run: |
+        echo "::set-output name=tagsa::${{ matrix.config.tags }}" |
+        sed -e 's|%|ghcr.io/r-hub/r-minimal/r-minimal:|g'
+        echo "::set-output name=tagsb::${{ matrix.config.tags }}" |
+        sed -e 's|%|rhub/r-minimal:|g'
+        echo "::set-output name=tagsa315::${{ matrix.config.tags }}" |
+        sed -e 's|%|ghcr.io/r-hub/r-minimal/r-minimal:alpine315-|g'
+        echo "::set-output name=tagsb315::${{ matrix.config.tags }}" |
+        sed -e 's|%|rhub/r-minimal:alpine315-|g'
+
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        platforms: linux/amd64
+#        platforms: linux/amd64,linux/arm64
+        push: true
+        build-args: |
+          R_VERSION=${{ matrix.config.r }}
+          ALPINE_VERSION=3.12.1
+        tags: ${{ steps.tags.outputs.tagsa }},${{ steps.tags.outputs.tagsb }}
+
+    - name: Build and push (Alpine 3.15)
+      if: false
+      uses: docker/build-push-action@v2
+      with:
+        platforms: linux/amd64,linux/arm64
+        push: true
+        build-args: |
+          R_VERSION=${{ matrix.config.r }}
+          ALPINE_VERSION=3.15.0
+        tags: ${{ steps.tags.outputs.tagsa315 }},${{ steps.tags.outputs.tagsb315 }}
