--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,8 +21,8 @@ jobs:
         - { r: '4.1.2',   tags: '%4.1.2,%4.1,%latest'                  }
         - { r: '4.0.5',   tags: '%4.0.5,%4.0'                          }
         - { r: '3.6.3',   tags: '%3.6.5,%3.6'                          }
-        - { r: '3.5.3',   tags: '%3.5.3,%3.5'                          }
-        - { r: '3.4.4',   tags: '%3.4.4,%3.4'                          }
+#        - { r: '3.5.3',   tags: '%3.5.3,%3.5'                          }
+#        - { r: '3.4.4',   tags: '%3.4.4,%3.4'                          }
 
     steps:
     - name: Login to GitHub Container Registry
