--- a/.github/workflows/old.yaml
+++ b/.github/workflows/old.yaml
@@ -53,8 +53,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        platforms: linux/amd64
-#        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64
         push: true
         build-args: |
           R_VERSION=${{ matrix.config.r }}
