--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -57,6 +57,7 @@ jobs:
         sed -e 's|%|rhub/r-minimal:alpine315-|g'
 
     - name: Build and push
+      if: false
       uses: docker/build-push-action@v2
       with:
         platforms: linux/amd64,linux/arm64
