--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -59,7 +59,8 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        platforms: linux/amd64,linux/arm64
+#        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
         push: true
         build-args: |
           R_VERSION=${{ matrix.config.r }}
@@ -68,7 +69,8 @@ jobs:
     - name: Build and push (Alpine 3.15)
       uses: docker/build-push-action@v2
       with:
-        platforms: linux/amd64,linux/arm64
+#        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
         push: true
         build-args: |
           R_VERSION=${{ matrix.config.r }}
