--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -65,12 +65,12 @@ jobs:
           R_VERSION=${{ matrix.config.r }}
         tags: ${{ steps.tags.outputs.tagsa }},${{ steps.tags.outputs.tagsb }}
 
-    - name: Build and push (Alpine 3.15)
-      uses: docker/build-push-action@v2
-      with:
-        platforms: linux/amd64,linux/arm64
-        push: true
-        build-args: |
-          R_VERSION=${{ matrix.config.r }}
-          ALPINE_VERSION=3.15.0
-        tags: ${{ steps.tags.outputs.tagsa315 }},${{ steps.tags.outputs.tagsb315 }}
+    # - name: Build and push (Alpine 3.15)
+    #   uses: docker/build-push-action@v2
+    #   with:
+    #     platforms: linux/amd64,linux/arm64
+    #     push: true
+    #     build-args: |
+    #       R_VERSION=${{ matrix.config.r }}
+    #       ALPINE_VERSION=3.15.0
+    #     tags: ${{ steps.tags.outputs.tagsa315 }},${{ steps.tags.outputs.tagsb315 }}
