--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -39,6 +39,7 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Build
+      id: build
       uses: docker/build-push-action@v2
       with:
         platforms: linux/amd64
