--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -45,7 +45,7 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Build
-      id: build
+      id: build-container
       uses: docker/build-push-action@v2
       with:
         platforms: linux/amd64
@@ -63,4 +63,4 @@ jobs:
         push: true
         build-args: |
           R_VERSION=${{ matrix.config.r }}
-        tags: ${{ steps.build.outputs.tags }}
+        tags: ${{ steps.build-container.outputs.tags }}
