--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -39,7 +39,7 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Build
-      id: build
+      id: build-container
       uses: docker/build-push-action@v2
       with:
         platforms: linux/amd64
@@ -57,4 +57,4 @@ jobs:
         push: true
         build-args: |
           R_VERSION=${{ matrix.config.r }}
-        tags: ${{ steps.build.outputs.tags }}
+        tags: ${{ steps.build-container.outputs.tags }}
