--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -45,7 +45,6 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Build
-      id: build-container
       uses: docker/build-push-action@v2
       with:
         platforms: linux/amd64
@@ -54,6 +53,13 @@ jobs:
         load: true
         build-args: |
           R_VERSION=${{ matrix.config.r }}
+        tags: rhub/r-minimal:test
+
+    - name: Calculate tags
+      id: tags
+      run: |
+        docker run -v `pwd`/calculate_tags.sh:/calculate_tags.sh \
+        rhub/r-minimal:test bash -c "/calculate_tags.sh ${{ matrix.config.r }}"
 
     - name: Push
       uses: docker/build-push-action@v2
@@ -63,4 +69,4 @@ jobs:
         push: true
         build-args: |
           R_VERSION=${{ matrix.config.r }}
-        tags: ${{ steps.build-container.outputs.tags }}
+        tags: ${{ steps.tags.outputs.tags }}
