--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,6 +25,11 @@ jobs:
         - { r: '3.4.4' }
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 10
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
