--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -19,6 +19,11 @@ jobs:
         - { r: 'next'  }
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 10
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
