--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -52,8 +52,7 @@ jobs:
     - name: Build
       uses: docker/build-push-action@v2
       with:
-        platforms: linux/amd64
-#        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64
         push: false
         load: true
         build-args: |
@@ -70,8 +69,7 @@ jobs:
     - name: Push
       uses: docker/build-push-action@v2
       with:
-        platforms: linux/amd64
-#        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64
         push: true
         build-args: |
           R_VERSION=${{ matrix.config.r }}
