--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -46,8 +46,7 @@ jobs:
     - name: Build
       uses: docker/build-push-action@v2
       with:
-        platforms: linux/amd64
-#        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64
         push: false
         load: true
         build-args: |
@@ -64,8 +63,7 @@ jobs:
     - name: Push
       uses: docker/build-push-action@v2
       with:
-        platforms: linux/amd64
-#        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64
         push: true
         build-args: |
           R_VERSION=${{ matrix.config.r }}
