--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -74,3 +74,13 @@ jobs:
         build-args: |
           R_VERSION=${{ matrix.config.r }}
         tags: ${{ steps.tags.outputs.tags }}
+
+  readme:
+    if: ${{ always() }}
+    name: Update DEADME
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Update README
+      uses: ./actions/readme-builder
