--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -98,7 +98,7 @@ jobs:
           echo "readme: ${{ github.event.inputs.readme }}"
 
   readme:
-    if: ${{ github.event.inputs.readme == '' || github.event.inputs.readme == 'yes' }}
+    if: ${{ (github.event.inputs.readme == '' || github.event.inputs.readme == 'yes') && always() }}
     name: Update DEADME
     runs-on: ubuntu-latest
     needs: daily-builds
