Need to checkout in the workflows
Otherwise they don't find the action in the first place...

[ci skip]

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -82,5 +82,10 @@ jobs:
     needs: build
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 10
+
     - name: Update README
       uses: ./actions/readme-builder
