--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -88,4 +88,4 @@ jobs:
         fetch-depth: 10
 
     - name: Update README
-      uses: ./actions/readme-builder
+      uses: ./actions/readme-build
