--- a/examples/golem/Dockerfile
+++ b/examples/golem/Dockerfile
@@ -16,5 +16,5 @@ RUN apk add --no-cache --update-cache \
 
 # installation of `golem`
 RUN installr -d \
-    -t "curl-dev openssl-dev libxml2-dev gfortran libgit2" \
-    -a "libgit2-dev" golem
+    -t "curl-dev openssl-dev libxml2-dev gfortran libgit2-dev" \
+    -a "libgit2" golem
