--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,13 +16,14 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - { r: 'devel' }
-        - { r: 'next'  }
-        - { r: '4.2.3' }
-        - { r: '4.1.3' }
-        - { r: '4.0.5' }
-        - { r: '3.6.3' }
-        - { r: '3.5.3' }
+#        - { r: 'devel' }
+#        - { r: 'next'  }
+        - { r: '4.3.0' }
+#        - { r: '4.2.3' }
+#        - { r: '4.1.3' }
+#        - { r: '4.0.5' }
+#        - { r: '3.6.3' }
+#        - { r: '3.5.3' }
 
     steps:
     - name: Checkout
