--- a/examples/sf/Dockerfile
+++ b/examples/sf/Dockerfile
@@ -1,7 +1,7 @@
 
 FROM rhub/r-minimal
 
-RUN apk add udunits-dev --repository=https://dl-cdn.alpinelinux.org/alpine/edge/testing
+RUN apk add udunits-dev --repository=https://dl-cdn.alpinelinux.org/alpine/edge/community
 
 RUN installr -d \
         -t "openssl-dev linux-headers gfortran proj-dev gdal-dev sqlite-dev geos-dev udunits-dev" \
