Need icu-libs in tidyverse example

--- a/examples/tidyverse/Dockerfile
+++ b/examples/tidyverse/Dockerfile
@@ -2,5 +2,5 @@ FROM rhub/r-minimal
 
 RUN installr -d \
     -t "curl-dev libxml2-dev linux-headers gfortran fontconfig-dev fribidi-dev harfbuzz-dev freetype-dev libpng-dev tiff-dev" \
-    -a "libcurl libxml2 fontconfig fribidi harfbuzz freetype libpng tiff libjpeg" \
+    -a "libcurl libxml2 fontconfig fribidi harfbuzz freetype libpng tiff libjpeg icu-libs" \
     tidyverse
