chore: bump curl to 8.6.0 in ssh-curl and add missing deps for new version

--- a/examples/ssh-curl/Dockerfile
+++ b/examples/ssh-curl/Dockerfile
@@ -1,11 +1,11 @@
 FROM rhub/r-minimal
 
 RUN installr -c -p \
-    && apk add --no-cache openssl openssl-dev libssh2 libssh2-dev \
-    && wget -qO - https://curl.haxx.se/download/curl-8.5.0.tar.gz \
+    && apk add --no-cache openssl openssl-dev libssh2 libssh2-dev libpsl libpsl-dev perl \
+    && wget -qO - https://curl.haxx.se/download/curl-8.6.0.tar.gz \
     | tar xz \
     && cd curl-* \
     && ./configure --with-openssl --with-libssh2 \
     && make \
     && make install \
-    && installr -d -t "openssl-dev libssh2-dev" curl
+    && installr -d -t "openssl-dev libssh2-dev libpsl-dev perl" curl
