refactor: clean-up ssh-curl example

--- a/examples/ssh-curl/Dockerfile
+++ b/examples/ssh-curl/Dockerfile
@@ -1,7 +1,6 @@
 FROM rhub/r-minimal
 
-RUN installr -c -p \
-    && apk add --no-cache openssl openssl-dev libssh2 libssh2-dev libpsl libpsl-dev perl \
+RUN installr -c -p -a "openssl openssl-dev libssh2 libssh2-dev libpsl libpsl-dev perl" \
     && wget -qO - https://curl.haxx.se/download/curl-8.6.0.tar.gz \
     | tar xz \
     && cd curl-* \
