changed shiny renv example, added rprofile

--- a/examples/renv-shiny/Dockerfile
+++ b/examples/renv-shiny/Dockerfile
@@ -1,17 +1,15 @@
-FROM rhub/r-minimal:4.2.3-patched
+FROM rhub/r-minimal:4.3.2
 
-COPY installr /usr/local/bin/
 
-RUN wget https://github.com/jgm/pandoc/releases/download/2.13/pandoc-2.13-linux-amd64.tar.gz && \
-    tar xzf pandoc-2.13-linux-amd64.tar.gz && \
-    mv pandoc-2.13/bin/* /usr/local/bin/ && \
-    rm -rf pandoc-2.13*
+RUN wget https://github.com/jgm/pandoc/releases/download/3.1.12/pandoc-3.1.12-linux-amd64.tar.gz && \
+    tar xzf pandoc-3.1.12-linux-amd64.tar.gz && \
+    mv pandoc-3.1.12/bin/* /usr/local/bin/ && \
+    rm -rf pandoc-3.1.12*
 
 COPY . .
 
 RUN installr -d -e \
-        -t "curl-dev libxml2-dev linux-headers gfortran fontconfig-dev fribidi-dev harfbuzz-dev freetype-dev libpng-dev tiff-dev zlib-dev" \
-        -a "libcurl libxml2 fontconfig fribidi harfbuzz freetype libpng tiff libjpeg icu-libs"
+        -t "zlib-dev"
 
 
 EXPOSE 3838
