Fix h2o, sf & xgboost examples

--- a/examples/xgboost/Dockerfile
+++ b/examples/xgboost/Dockerfile
@@ -1,4 +1,6 @@
 
 FROM rhub/r-minimal
 
-RUN installr -d -t "gfortran libexecinfo-dev" -a libexecinfo xgboost
+RUN mkdir -p ~/.R && echo 'CXX17FLAGS+=-DDMLC_LOG_STACK_TRACE=0 -DDMLC_USE_FOPEN64=0' >> ~/.R/Makevars
+
+RUN installr -d -t "gfortran" xgboost
