--- a/examples/odbc/Dockerfile
+++ b/examples/odbc/Dockerfile
@@ -1,4 +1,4 @@
 
 FROM rhub/r-minimal
 
-RUN installr -d -t unixodbc-dev -a unixodbc odbc
+RUN installr -d -t unixodbc-dev -a unixodbc odbc Rcppcore/Rcpp
