--- a/examples/rstan/Dockerfile
+++ b/examples/rstan/Dockerfile
@@ -3,4 +3,4 @@ FROM rhub/r-minimal
 
 ENV DOWNLOAD_STATIC_LIBV8=1
 
-RUN installr -d -t "curl-dev linux-headers gfortran" rstan
+RUN installr -d -t "curl-dev linux-headers gfortran" rstan Rcppcore/Rcpp
