--- a/examples/sf/Dockerfile
+++ b/examples/sf/Dockerfile
@@ -4,6 +4,6 @@ FROM rhub/r-minimal
 RUN installr -d \
         -t "openssl-dev linux-headers gfortran proj-dev gdal-dev sqlite-dev geos-dev udunits-dev" \
 	-a "libssl3 proj gdal geos expat udunits" \
-	sf
+	sf Rcppcore/Rcpp
 
 RUN R -q -e 'library(sf)'
