--- a/examples/pingr/Dockerfile
+++ b/examples/pingr/Dockerfile
@@ -1,6 +1,6 @@
 
 FROM rhub/r-minimal
 
-RUN installr -d -t linux-headers pingr
+RUN installr -d -t linux-headers r-lib/pingr
 
 CMD [ "R", "-q", "-e", "pingr::is_online() || stop('offline')" ]
