--- a/examples/prophet/Dockerfile
+++ b/examples/prophet/Dockerfile
@@ -3,4 +3,4 @@ FROM rhub/r-minimal
 
 ENV DOWNLOAD_STATIC_LIBV8=1
 
-RUN installr -d -t "linux-headers gfortran curl-dev" prophet
+RUN installr -d -t "linux-headers gfortran curl-dev" prophet Rcppcore/Rcpp
