--- a/examples/plumber/Dockerfile
+++ b/examples/plumber/Dockerfile
@@ -2,7 +2,7 @@ FROM rhub/r-minimal
 
 RUN installr -d \
     -t "libsodium-dev curl-dev linux-headers icu-dev" \
-    -a "libsodium icu"\
+    -a "libsodium icu-libs"\
     plumber Rcppcore/Rcpp
 
 WORKDIR /app
