--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -1,109 +1,85 @@
-name: Daily R devel and R patched build
+name: r-devel-daily.yml
 
 on:
   workflow_dispatch:
-    inputs:
-      build:
-        description: 'Build R-devel and R-next'
-        required: true
-        type: choice
-        options:
-        - 'yes'
-        - 'no'
-        default: 'yes'
-      readme:
-        description: 'Update README'
-        required: true
-        type: choice
-        options:
-        - 'yes'
-        - 'no'
-        default: 'yes'
   schedule:
     - cron:  '55 6 * * *'
 
 jobs:
 
-  daily-builds:
-    if: ${{ github.event.inputs.build == '' || github.event.inputs.build == 'yes' }}
-    name: ${{ matrix.config.r }}
+  matrix:
     runs-on: ubuntu-latest
+    name: Setup
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+    - id: set-matrix
+      run: |
+        matrix=$(echo '
+        [ { "r": "devel" },
+          { "r": "next" } ]
+        ' | jq -c)
+        echo "matrix=$matrix"
+        echo "matrix=$matrix" >> $GITHUB_OUTPUT
 
+  amd64:
+    needs: matrix
+    uses: ./.github/workflows/build-one.yml
     strategy:
       fail-fast: false
       matrix:
-        config:
-        - { r: 'devel' }
-        - { r: 'next'  }
+        config: ${{ fromJson(needs.matrix.outputs.matrix) }}
+    with:
+      platform: 'amd64'
+      runs-on: 'ubuntu-latest'
+      rversion: ${{ matrix.config.r }}
+    secrets: inherit
 
+  arm64:
+    needs: matrix
+    uses: ./.github/workflows/build-one.yml
+    strategy:
+      fail-fast: false
+      matrix:
+        config: ${{ fromJson(needs.matrix.outputs.matrix) }}
+    with:
+      platform: 'arm64'
+      runs-on: 'ubuntu-24.04-arm'
+      rversion: ${{ matrix.config.r }}
+    secrets: inherit
+
+  manifest:
+    needs: [matrix, amd64, arm64]
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        config: ${{ fromJson(needs.matrix.outputs.matrix) }}
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 10
-
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
-
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-      with:
-        image: tonistiigi/binfmt:qemu-v8.1.5
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Build
-      uses: docker/build-push-action@v6
-      with:
-        platforms: linux/amd64
-        push: false
-        load: true
-        build-args: |
-          R_VERSION=${{ matrix.config.r }}
-        tags: rhub/r-minimal:test
-
-    - name: Calculate tags
-      id: tags
-      run: |
-        cp -r tools /tmp
-        docker run -v /tmp/tools:/tools \
-        rhub/r-minimal:test bash -c "/tools/calculate_tags.sh ${{ matrix.config.r }}"
-
-    - name: Push
-      uses: docker/build-push-action@v6
-      with:
-        platforms: linux/amd64,linux/arm64
-        push: true
-        build-args: |
-          R_VERSION=${{ matrix.config.r }}
-        tags: ${{ steps.tags.outputs.tags }}
-
-  debug:
-    runs-on: ubuntu-latest
-    if: always()
-    name: Parameters
-    steps:
-      - name: Input parameters
-        run: |
-          echo "build: ${{ github.event.inputs.build }}"
-          echo "readme: ${{ github.event.inputs.readme }}"
+    - run: |
+        # Create the manifest lists and push them to the respective registries
+        for tag in `echo ${{ needs.amd64.outputs.tags }} | tr ',' ' '`; do
+          docker buildx imagetools create -t $tag \
+            ghcr.io/r-hub/r-minimal/r-minimal:${{ matrix.config.r }}-amd64 \
+            ghcr.io/r-hub/r-minimal/r-minimal:${{ matrix.config.r }}-arm64;
+        done
+      shell: bash
 
   readme:
-    if: ${{ (github.event.inputs.readme == '' || github.event.inputs.readme == 'yes') && always() }}
     name: Update README
     runs-on: ubuntu-latest
-    needs: daily-builds
+    needs: manifest
 
     steps:
     - name: Checkout
