Need to build devel only

--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -16,8 +16,7 @@ jobs:
     - id: set-matrix
       run: |
         matrix=$(echo '
-        [ { "r": "devel" },
-          { "r": "next" } ]
+        [ { "r": "devel" } ]
         ' | jq -c)
         echo "matrix=$matrix"
         echo "matrix=$matrix" >> $GITHUB_OUTPUT
